<resources>
    <string name="app_name">Travail Pratique 2 - Jonathan Lamontagne</string>
    <string name="tv_connexion">Connect</string>
    <string name="til_email">Enter your email</string>
    <string name="til_password">Enter your password</string>
    <string name="til_email2">Change your register email </string>
    <string name="til_name">Change your register name</string>
    <string name="til_confirmPassword">Confirm your password</string>
    <string name="btn_create_user">Subscribe</string>
    <string name="btn_login">TO CONNECT</string>
    <string name="tv_titreConnexion">Connect</string>
    <string name="tv_user">User</string>
    <string name="tv_enSession">You have connect successfully</string>
    <string name="btn_logout">Disconnect</string>
    <string name="btn_modifier_profile">Update your profile</string>
    <string name="btn_return">Return</string>
    <string name="tv_inscription">Subscribe</string>
    <string name="error_email">Please enter a valid email</string>
    <string name="error_password">Password must contain at least 6 characters</string>
    <string name="error_confirmPassword">Passwords are different</string>
    <string name="error_authentification">Authentification error</string>
    <string name="error_connexion">An error occurred during connection</string>
    <string name="user_cree">User created</string>
    <string name="btn_gestionBD">DB MANAGEMENT</string>
    <string name="et_codeLivre">Enter the book code</string>
    <string name="et_titreLivre">Enter the title of the book</string>
    <string name="et_auteurLivre">Enter the name of the author of the book</string>
    <string name="et_genreLivre">Enter the genre of the book</string>
    <string name="btn_sauvegarder">SAVE IN THE DB</string>
    <string name="btn_afficherBD">AFFICHER LES DONNÉES DE LA BD DANS UNE LISTE</string>
    <string name="et_summary">Enter a brief summary of the book</string>
    <string name="msg_save_successfully">Saved successfully</string>
    <string name="error_bdSave">Writing error in the database</string>
    <string name="error_invalid_data">Please check that all your fields are filled in</string>
    <string name="btn_update">UPDATING DATA</string>
    <string name="tv_book">Book</string>
    <string name="btn_delete">DELETE THE BOOK</string>
    <string name="msg_update_successfully">Your book has been updated</string>
    <string name="error_update">An error occurred during the update</string>
    <string name="msg_delete_successfully">Book successfully deleted from the database</string>
    <string name="error_delete">An error occurred while deleting</string>
    <string name="confirm_delete">Are you sure you want to delete this book?</string>
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>
    <string name="option_no_selected">You have selected the option no</string>
    <string name="profile_change_successfully">Profile change successfully</string>
</resources>